# visual-tactile-localization-simulation

./: .gitignore  CMakeLists.txt  README.md  idl.thrift
app/scripts/: app_visual-tactile-sim.xml  visual-tactile-app.xml  visual-tactile-sim_app.xml  visual-tactile-sim_system.xml  visual-tactile-system.xml
cmake/: FindGAZE_CTRL.cmake  FindHAND_CTRL_CMD.cmake  FindHEAD_KIN.cmake  FindIKIN_FWD_EXT.cmake
config/: hand_control_module_config.ini  module_config.ini
config/setup/: module_config.ini
config/simulation/: hand_control_module_config.ini  module_config.ini
headers/: ArmController.h  FingerController.h  HandControlCommand.h  HandControlModule.h  HandController.h  ModelHelper.h  RotationTrajectoryGenerator.h  TrajectoryGenerator.h  filterCommand.h
include/: ArmController.h  FilterCommand.h  FingerController.h  HandControlCommand.h  HandControlModule.h  HandControlResponse.h  HandController.h  ModelHelper.h  RotationTrajectoryGenerator.h  TrajectoryGenerator.h  VIS_TAC_IDL.h
models/box_alt/: box.off  model.config  model.rsdf  model.sdf
models/mustard/: model.config  model.rsdf  model.sdf  mustard.dae  mustard.stl
models/observer_origin/: model.config  model.sdf
models/scenario/: model.config  model.sdf
models/shelf_alt/: model.config  model.rsdf  model.sdf
models/table_alt/: model.config  model.rsdf  model.sdf
src/: ArmController.cpp  CMakeLists.txt  FilterCommand.cpp  FingerController.cpp  HandControlCommand.cpp  HandControlModule.cpp  HandControlResponse.cpp  HandController.cpp  ModelHelper.cpp  RotationTrajectoryGenerator.cpp  TrajectoryGenerator.cpp  VIS_TAC_IDL.cpp  filterCommand.cpp  fwd_kin_ext.cpp  main.cpp
src/demo/: CMakeLists.txt  thrift_visual_tactile_loc_thrift.cmake
src/demo/app/scripts/: visual-tactile-app.xml  visual-tactile-sim_app.xml  visual-tactile-sim_system.xml  visual-tactile-system.xml
src/demo/conf/setup/: demo_config.ini
src/demo/conf/simulation/: demo_config.ini
src/demo/include/: ArmController.h  FilterCommand.h  ModelHelper.h  RotationTrajectoryGenerator.h  TrajectoryGenerator.h
src/demo/include/thrift/: VIS_TAC_IDL.h
src/demo/src/: ArmController.cpp  FilterCommand.cpp  ModelHelper.cpp  RotationTrajectoryGenerator.cpp  TrajectoryGenerator.cpp  VIS_TAC_IDL.cpp  main.cpp
src/demo/thrift/: visual_tactile_loc.thrift
src/filter-point-cloud/: CMakeLists.txt
src/filter-point-cloud/src/: FilterPointCloud.cpp
src/gaze-controller/include/: GazeController.h
src/gaze-controller/src/: GazeController.cpp
src/ground-truth/: CMakeLists.txt
src/ground-truth/conf/calibration/: cam_calib  cam_calib_droid  cam_calib_icub  cam_calib_icub_640_480
src/ground-truth/conf/setup/: gt_tracker_config.ini
src/ground-truth/conf/simulation/: gt_tracker_config.ini
src/ground-truth/include/: ArucoBoardEstimator.h  CharucoBoardEstimator.h  GazeController.h  KalmanFilter.h  Tracker.h  UcoBoardEstimator.h
src/ground-truth/src/: ArucoBoardEstimator.cpp  CharucoBoardEstimator.cpp  GazeController.cpp  KalmanFilter.cpp  Tracker.cpp  UcoBoardEstimator.cpp  main.cpp
src/hand-control/: CMakeLists.txt
src/hand-control/conf/setup/: hand-control_config.ini
src/hand-control/conf/simulation/: hand-control_config.ini
src/hand-control/include/: FingerController.h  HandControlCommand.h  HandControlModule.h  HandControlResponse.h  HandController.h
src/hand-control/src/: FingerController.cpp  HandControlCommand.cpp  HandControlModule.cpp  HandControlResponse.cpp  HandController.cpp
src/head-kinematics/include/: HeadKinematics.h
src/head-kinematics/src/: HeadKinematics.cpp  HeadKinematics.cpp~
src/ikin-fwd-extended/include/: iKinFwdExtended.h
src/ikin-fwd-extended/src/: iKinFwdExtended.cpp
src/viewer/: CMakeLists.txt
src/viewer/src/: CMakeLists.txt
src/viewer/src/si-viewer/: CMakeLists.txt
src/viewer/src/si-viewer/conf/setup/: si_viewer_config.ini
src/viewer/src/si-viewer/conf/simulation/: si_viewer_config.ini
src/viewer/src/si-viewer/shader/: shader_model.frag
src/viewer/src/si-viewer/shader/green_shader/: shader_model.frag
src/viewer/src/si-viewer/shader/red_shader/: shader_model.frag
src/viewer/src/si-viewer/src/: SuperimposeCameraViewer.cpp
src/viewer/src/vtk-viewer/: CMakeLists.txt
src/viewer/src/vtk-viewer/conf/setup/: vtk_viewer_config.ini
src/viewer/src/vtk-viewer/conf/simulation/: vtk_viewer_config.ini
src/viewer/src/vtk-viewer/include/: handKinematics.h  vtk3DAxes.h  vtkFinger.h  vtkHand.h
src/viewer/src/vtk-viewer/src/: VtkViewer.cpp  handKinematics.cpp  vtk3DAxes.cpp  vtkFinger.cpp  vtkHand.cpp
