##############################################################################
#                                                                            #
# Copyright (C) 2018 Fondazione Istituto Italiano di Tecnologia (IIT)        #
# All Rights Reserved.                                                       #
#                                                                            #
##############################################################################

#
# author: Nicola Piga
#

add_subdirectory(demo)
add_subdirectory(hand-control)
# add_subdirectory(point-cloud-filter)
# add_subdirectory(superimpose-viewer)
# add_subdirectory(viewer)
# add_subdirectory(ground-truth)
