##############################################################################
#                                                                            #
# Copyright (C) 2018 Fondazione Istituto Italiano di Tecnologia (IIT)        #
# All Rights Reserved.                                                       #
#                                                                            #
##############################################################################

#
# author: Nicola Piga
#

add_subdirectory(demo)
add_subdirectory(hand-control)
add_subdirectory(filter-point-cloud)
add_subdirectory(viewer)
add_subdirectory(ground-truth)
